correct syntax error